make use of newer java methods (pattern variable and List.of() and Set.of())