@@ -181,7 +181,7 @@ public abstract class IdTokenCredentials extends BaseStandardCredentials {
      * @see <a href="https://openid.net/specs/openid-connect-core-1_0.html#IDToken">OpenID Connect list</a>
      * @see <a href="https://www.rfc-editor.org/rfc/rfc7519#section-4.1">JWT list</a>
      */
-    public static final Set<String> STANDARD_CLAIMS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    public static final Set<String> STANDARD_CLAIMS = Set.of(
         Claims.ISSUER,
         Claims.AUDIENCE,
         Claims.EXPIRATION,
@@ -193,7 +193,7 @@ public abstract class IdTokenCredentials extends BaseStandardCredentials {
         "azp",
         Claims.NOT_BEFORE,
         Claims.ID
-    )));
+    );
 
     protected final @NonNull String token() {
         IdTokenConfiguration cfg = IdTokenConfiguration.get();
